--- a/css/style.css
+++ b/css/style.css
@@ -21,111 +21,90 @@ html {
 }
 
 body {
-  
+  background-color: var(--white-200);
   overflow: overlay;
+}
+
+/* Wrappers */
+
+.wrapper {
+  margin-inline: auto;
+  padding-inline: 2rem;
+  width: 41.4rem;
 }
 
 /* Header */
 
-.header {
-  background: var(--gradient);
-  height: 20rem;
-  padding-inline: 2rem;
-}
-
-.header__text {
-  display: flex;
-  justify-content: space-between;
-
+header {
   color: white;
   font-family: var(--lexend);
   font-size: 1.8rem;
   line-height: 2.2rem;
-  text-align: center;
 
-  padding-top: 4.8rem;
-  padding-bottom: 4.1rem;
+  background: var(--gradient);
+  height: 20rem;
 }
 
-.header__search {
+header .header__text {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  padding-block: 4.2rem;
 }
 
-.header__search input {
-  background-color: rgba(255, 255, 255, 0.2);
+header input {
+  background: rgba(255, 255, 255, 0.2);
+  background-image: url(/assets/lens.png);
+  background-repeat: no-repeat;
+  background-position: 1.2rem;
+
   border: none;
-  border-radius: .5rem;
+  border-radius: 5px;
+
   height: 4rem;
-  width: 37.4rem;
+  width: 100%;
 }
 
-.header__search input::placeholder {
+header input::placeholder {
   color: white;
-  font-family: var(--inter);
   font-weight: 500;
   font-size: 1.4rem;
   line-height: 1.7rem;
-  opacity: 0.5;
-  text-align: left;
-  padding-left: 5.8rem;
+  opacity: .5;
+  padding-left: 3.8rem;
 }
 
 /* Cards */
 
-.main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--white-200);
-  padding-inline: 5rem;
-}
-
-.cards {
+.card {
   display: flex;
   flex-direction: column;
 
-  font-family: 'Lexend Deca';
   background-color: white;
-  border-radius: .5rem;
+  font-family: var(--lexend);
+  width: 100%;
+  padding: 1.6rem;
 
-  width: 37.4rem;
-
-  margin-bottom: 2.5rem;
-  padding-inline: 1.5rem;
+  box-shadow: 0px 0px 10px rgba(19, 19, 31, 0.05);
+  border-radius: 5px;
 }
 
-.cards:nth-child(1) {
-  margin-top: 5rem;
+.card:nth-child(1) {
+  margin-top: 3rem;
 }
 
 .card__date {
   display: flex;
   justify-content: space-between;
-  align-items: center;
 
-  padding-top: 1.5rem;
-  padding-bottom: 2.7rem;
-}
-
-.card__date p {
   color: var(--gray);
   font-size: 1.4rem;
   line-height: 1.8rem;
-}
 
-.card__text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  padding-bottom: 1.5rem;
-  max-width: 100vw;
+  padding-bottom: 1.6rem;
 }
 
 .card__text p:nth-child(1) {
-  color: var(--dark-gray);
+  color: var(--gray-dark);
   font-size: 1.8rem;
   line-height: 2.2rem;
 
@@ -134,6 +113,6 @@ body {
 
 .card__text p:nth-child(2) {
   color: var(--gray);
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   line-height: 2.6rem;
 }
