--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ body {
 .wrapper {
   margin-inline: auto;
   padding-inline: 2rem;
-  width: 41.4rem;
 }
 
 /* Header */
@@ -92,6 +91,10 @@ header input::placeholder {
   margin-top: 3rem;
 }
 
+.card:last-child {
+  margin-bottom: 5rem;
+}
+
 .card__date {
   display: flex;
   justify-content: space-between;
@@ -115,4 +118,27 @@ header input::placeholder {
   color: var(--gray);
   font-size: 1.4rem;
   line-height: 2.6rem;
+}
+
+/* Media queries */
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .wrapper {
+    padding-inline: 10rem;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1440px) and (max-width: 1920px) {
+  .wrapper {
+    padding-inline: 20rem;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 2560px) {
+  .wrapper {
+    padding-inline: 30rem;
+    width: 100%;
+  }
 }
