--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,11 @@ header .header__text {
 
 header input {
   background: rgba(255, 255, 255, 0.2);
+
   background-image: url(/assets/lens.png);
   background-repeat: no-repeat;
   background-position: 1.2rem;
+  background-size: 1.5rem;
 
   border: none;
   border-radius: 5px;
@@ -129,11 +131,46 @@ header input::placeholder {
   }
 }
 
-@media screen and (min-width: 1440px) and (max-width: 1920px) {
+@media screen and (min-width: 1025px) and (max-width: 1920px) {
   .wrapper {
     padding-inline: 20rem;
     width: 100%;
   }
+
+  header {
+    font-size: 2.4rem;
+    line-height: 3rem;
+    height: 25rem;
+  }
+
+  header input {
+    background-position: 3rem;
+    background-size: 2.5rem;
+
+    height: 6.5rem;
+    padding-left: 6.4rem;
+  }
+
+  header input::placeholder {
+    font-size: 1.8rem;
+    line-height: 2.2rem;
+  }
+
+  .card__date {
+    font-size: 1.6rem;
+    line-height: 2rem;
+  }
+
+  .card__text p:nth-child(1) {
+    font-size: 2.6rem;
+    line-height: 3.2rem;
+  }
+  
+  .card__text p:nth-child(2) {
+    font-size: 1.8rem;
+    line-height: 3.2rem;
+  }
+
 }
 
 @media screen and (min-width: 2560px) {
